--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,8 +7,8 @@
 
     <fragment
         android:id="@+id/RostersListFragment"
-        android:name="com.dakkaplace.rooster.RostersListFragment"
-        android:label="@string/first_fragment_label"
+        android:name="com.dakkaplace.rooster.Infrastructure.RostersListFragment"
+        android:label="@string/rosters_list_fragment_label"
         tools:layout="@layout/rosters_list">
 
         <action
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.dakkaplace.rooster.SecondFragment"
+        android:name="com.dakkaplace.rooster.Presentation.SecondFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
 
